Fasto/fasto/tests/divide.out
2
2
Interpreter error: Division with zero error: ; expected int and int, got int (2) and int (0) instead at line 5, column 21
